crates/compiler/test_syntax/tests/snapshots/pass/when_in_closure_in_when_guard_wtf.expr.roc
when f
is
s if\t->when 0
is z->f
 z->m
