crates/compiler/test_syntax/tests/snapshots/fail/nested_when_expect_binop_when.expr.roc
when s
is
z->expect!%when s
is z->q
